CDPT-1746: List block - Fix focus issue on arrow button - Add sidebar block to index.js - Use sections and button on mobile for better accessibility

--- a/public/app/frontend/src/components/sidebar-block/sidebar-block.scss
+++ b/public/app/frontend/src/components/sidebar-block/sidebar-block.scss
@@ -2,38 +2,52 @@
 
 .sidebar-block {
   width: 100%;
-    &__heading-wrapper {
-      @include spacing('padding', 2);
-      display: flex;
-      justify-content: space-between;
-      background-color: var(--justice-primary-black);
-    }
-  &__show-more {
-    @include arrow-button('light');
-    @media screen and (min-width: $justice-lg) {
-      display: none;
-    }
+  &__heading-wrapper {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--justice-primary-black);
   }
   &__heading {
-    font-family: var(--heading-font);
-    color: var(--justice-primary-white);
+    @include body;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: var(--heading-font);
+    color: var(--justice-primary-white);
     width: 100%;
-
-    &--archive {
-      @media screen and (min-width: $justice-lg) {
-        &:after {
-          content: '';
-          display: block;
-          background-image: url(./assets/archived-page.png);
-          background-repeat: no-repeat;
-          background-size: contain;
-          height: 1.5rem;
-          width: 2rem;
-        }
+    height: 100%;
+    margin-top: 0;
+  }
+  &__heading-text {
+    display: none;
+    @media screen and (min-width: $justice-lg) {
+      @include spacing('padding', 2);
+      @include spacing('padding', 4, 'top');
+      @include spacing('padding', 4, 'bottom');
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      &--archive {
+          &:after {
+            content: '';
+            display: block;
+            background-image: url(./assets/archived-page.png);
+            background-repeat: no-repeat;
+            background-size: contain;
+            height: 1.5rem;
+            width: 2rem;
+          }
       }
+    }
+  }
+  &__heading-button {
+    @include arrow-button('light');
+    @include spacing('padding', 2);
+    @include spacing('padding', 4, 'top');
+    @include spacing('padding', 4, 'bottom');
+    width: 100%;
+    @media screen and (min-width: $justice-lg) {
+      display: none;
     }
   }
   &__content {
